--- a/index.html
+++ b/index.html
@@ -273,24 +273,11 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio2.jpg" alt="">
+                <img src="images/Linux.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>LAMBORGHINI</h4>
-                    <p>HTML, CSS, JS + Framework Swiper. Figma-pour la conception du site. Ce site s'adapter à
-                        différents écrans.</p>
-                    <a href="https://alexnesvit.github.io/Monprojet-Lambo-html-css-javascript/" target="_blank"><i
-                            class='bx bx-link-external'></i></a>
-                    <span class="focus"></span>
-                </div>
-                <span class="animate scroll" style="--i:5;"></span>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="images/portfolio3.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>SOLAR SYSTEM</h4>
-                    <p>HTML + CSS. Solar System animation.</p>
-                    <a href="https://alexnesvit.github.io/Solar/" target="_blank"><i
+                    <h4>Linux USER</h4>
+                    <p>Experienced Linux user with proficiency in system administration.</p>
+                    <a href="https://github.com/RitikJaat" target="_blank"><i
                             class='bx bx-link-external'></i></a>
                     <span class="focus"></span>
                 </div>
@@ -298,41 +285,30 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio4.jpg" alt="">
+                <img src="images/google_cloud-icon.svg" width="40px" alt="">
                 <div class="portfolio-layer">
-                    <h4>TELEGRAM-BOT</h4>
-                    <p>PYTHON + AIOGRAM. Telegramm Bot pour l'inscription sur le site. Retrouver toutes mes projets sur
-                        mon GitHub.</p>
-                    <a href="https://github.com/AlexNesvit" target="_blank"><i class='bx bx-link-external'></i></a>
-                    <span class="focus"></span>
-                </div>
-                <span class="animate scroll" style="--i:3;"></span>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="images/portfolio5.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>GITHUB BOT</h4>
-                    <p>PYTHON. Bot GitHub pour automatiser les activités sur GitHub. Retrouver toutes mes projets sur
-                        mon GitHub. </p>
-                    <a href="https://github.com/AlexNesvit" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <h4>G-Cloud</h4>
+                    <p>Proficient in Google Cloud Platform (GCP) with a strong foundation in Compute Engine, including VM management.</p>
+                    <a href="https://cloud.google.com/" target="_blank"><i
+                            class='bx bx-link-external'></i></a>
                     <span class="focus"></span>
                 </div>
                 <span class="animate scroll" style="--i:5;"></span>
             </div>
 
+
             <div class="portfolio-box">
-                <img src="images/portfolio6.jpg" alt="">
+                <img src="images/Musific.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Projet Personal-Card</h4>
-                    <p>Retrouver toutes mes créations et projets sur mon GitHub. Ou bien contactez-moi: 07.68.26.18.77
-                    </p>
-                    <a href="https://alexnesvit.github.io/Personal-Card/" target="_blank"><i
-                            class='bx bx-link-external'></i></a>
+                    <h4>Musific</h4>
+                    <p>Musific is a Music streaming site that lets you play your offline music.(working on online streaming)</p>
+                    <a href="https://musific.freewebhostmost.com" target="_blank"><i class='bx bx-link-external'></i></a>
                     <span class="focus"></span>
                 </div>
-                <span class="animate scroll" style="--i:7;"></span>
+                <span class="animate scroll" style="--i:5;"></span>
             </div>
+
+
             <!-- 
             <div class="btn-box btns">
                 <button type="submit" class="btn">Envoyer</button>
