--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     <!--Copyright footer design-->
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 by Alex Nesvit | All Rights Reserved.</p>
+            <p>Copyright &copy; 2024 by Ritik Jaat | All Rights Reserved.</p>
 
             <span class="animate scroll" style="--i:1;"></span>
         </div>
