--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 <div class="portfolio-layer">
                     <h4>GenesisOS</h4>
                     <p></p>
-                    <a href="https://musific.freewebhostmost.com" target="_blank"><i
+                    <a href="https://www.genesisos.dev/" target="_blank"><i
                             class='bx bx-link-external'></i></a>
                     <span class="focus"></span>
                 </div>
