--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
 
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2024 by Ritik | All Rights Reserved.</p>
+            <p>Copyright &copy; 2024 by Ritik Jaat | All Rights Reserved.</p>
 
             <span class="animate scroll" style="--i:1;"></span>
         </div>
